# CatClawMusic

./: .gitignore  CHANGELOG.md  CODE_WIKI.md  CatClawMusic.sln  Directory.Build.props  DCodeCatClawMusicbuild_output.txt  LICENSE.txt  README.html  README.md  RELEASE-NOTES-v1.0.5.md  SIGNING.md  TranslateResx.csx  ValidateResx.csx  build_apk.bat  build_native_test.txt  build_native_test2.txt  build_native_test3.txt  build_native_test4.txt  build_output_latest.txt  catclaw.keystore  check_so_align.py  copy-base.ps1  find_methods.ps1  fix-resx.ps1  global.json  install-dotnet9.ps1  overview.md  prototype_landscape_player.html  publish_log2.txt  reasonix.toml  resize_icon.csx  test_duet.ttml  test_ttml_parse.csx
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
CatClawMusic.Core/: CatClawMusic.Core.csproj
CatClawMusic.Core.Tests/: CatClawMusic.Core.Tests.csproj  SplitArtistNamesTests.cs
CatClawMusic.Data/: AiArtistScraper.cs  BackupService.cs  BaiduBaikeScraper.cs  CatClawMusic.Data.csproj  CatClawServerClient.cs  ClawCircleP2PDataProvider.cs  ClawCircleP2PService.cs  ClawCircleService.cs  (+16 more)
CatClawMusic.Native/: Android.mk  Application.mk  CMakeLists.txt  build_native.ps1  ndk_build_log.txt  ndk_build_log2.txt  ndk_build_log3.txt  ndk_build_log4.txt
CatClawMusic.Native/include/: catclaw_native.h
CatClawMusic.Native/jni/: Android.mk  Application.mk
CatClawMusic.Native/src/: audio_processor.cpp  color_extractor.cpp  fft.cpp  lrc_parser.cpp  native_bridge.cpp  spectrum_processor.cpp  stack_blur.cpp  tag_reader.cpp
(+668 files in other folders)
